k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fsl-service
  namespace: production
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: fsl-app
  type: ClusterIP  # Mantenha como ClusterIP (o Ingress cuidará do roteamento)

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-statefulset
  namespace: production
spec:
  serviceName: fsl-service
  replicas: 3
  selector:
    matchLabels:
      app: fsl-app
  template:
    metadata:
      labels:
        app: fsl-app
    spec:
      containers:
      - name: app
        image: nginx:latest  # Replace with your valid container image
        ports:
        - containerPort: 8080
