k8/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fsl-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # Use a classe padrão do Minikube
  rules:
  - host: fsl-challenge.me  # Domínio exigido
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fsl-service  # Nome do Service
            port:
              number: 8080
